style: fix filter search on tablet

--- a/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_listing.css
+++ b/src/templates/tpl_modified/css/grandeljay_wordpress_integration_blog_listing.css
@@ -33,7 +33,7 @@
 
     margin-bottom: var(--gap);
 }
-@media (min-width: 768px) {
+@media (min-width: 985px) {
     .filter .category_and_search {
         flex-direction: row;
     }
